# kakfa_experiment

./: .gitignore  README.md  docker-compose.yml  makefile  pyproject.toml
src/faust/: __init__.py  consumer.py  producer.py
