[tool.poetry]
name = "kafka-experiment"
version = "0.1.0"
description = ""
authors = ["Noel Wilson <jwnwilson88@gmail.com>"]
readme = "README.md"
packages = [{include = "kafka_experiment"}]

[tool.poetry.dependencies]
python = "^3.9"
confluent-kafka = "^1.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
